--- a/llamaIndex_Loading.ipynb
+++ b/llamaIndex_Loading.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKlzRvc6e0OUhQiNUgs5Zk",
+      "authorship_tag": "ABX9TyM/UV8ZpPxj0X/6UTk4gTW5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,80 +29,92 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://docs.llamaindex.ai/en/stable/module_guides/querying/retriever/retrievers.html"
+        "https://docs.llamaindex.ai/en/stable/getting_started/concepts.html"
       ],
       "metadata": {
-        "id": "T6AWjnvs7_uC"
+        "id": "azES_c4aUGeD"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        " **Auto-Retrieval**\n",
+        "**Loading**: this refers to getting your data from where it lives – whether it’s text files, PDFs, another website, a database, or an API – into your pipeline. LlamaHub provides hundreds of connectors to choose from.\n",
         "\n",
-        "These retrieval techniques perform semi-structured queries, combining semantic search with structured filtering.\n",
         "\n",
-        "1. A Simple to Advanced Guide with Auto-Retrieval (with Pinecone + Arize Phoenix)\n",
+        " **Loading stage**\n",
         "\n",
-        "2. Auto-Retrieval (with Lantern)\n",
+        "**Nodes and Documents**: A Document is a container around any data source - for instance, a PDF, an API output, or retrieve data from a database. A Node is the atomic unit of data in LlamaIndex and represents a “chunk” of a source Document. Nodes have metadata that relate them to the document they are in and to other nodes.\n",
         "\n",
-        "3. Auto-Retrieval (with Chroma)\n",
+        "**Connectors**: A data connector (often called a Reader) ingests data from different data sources and data formats into Documents and Nodes.\n",
         "\n",
-        "4. Auto-Retrieval (with BagelDB)\n",
-        "\n",
-        "5. Structured Hierarchical Retrieval\n",
-        "\n",
-        "6. Auto-Retrieval from a Vectara Index\n"
-      ],
-      "metadata": {
-        "id": "et52wk4s4Fcf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        " **Advanced Retrieval and Search**\n",
-        "\n",
-        "  These guides contain advanced retrieval techniques. Some are common like keyword/hybrid search, reranking, and more. Some are specific to LLM + RAG pipelines, like small-to-big and auto-merging retrieval.\n",
-        "\n",
-        "1. Define Custom Retriever\n",
-        "2. BM25 Hybrid Retriever\n",
-        "3. Simple Fusion Retriever\n",
-        "4. Reciprocal Rerank Fusion Retriever\n",
-        "5. Relative Score Fusion and Distribution-Based Score Fusion\n",
-        "6. Auto Merging Retriever\n",
-        "7. Metadata Replacement + Node Sentence Window\n",
-        "8. Composable Objects\n",
         "\n"
       ],
       "metadata": {
-        "id": "Di1raoS1ksj-"
+        "id": "6TEVkihZUN6v"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        " **Composed Retrievers**\n",
+        "https://docs.llamaindex.ai/en/stable/module_guides/loading/documents_and_nodes/root.html\n",
         "\n",
-        "These are retrieval techniques that are composed on top of other retrieval techniques - providing higher-level capabilities like hierarchical retrieval and query decomposition.\n",
         "\n",
-        "1. Recursive Retriever + Query Engine Demo\n",
-        "2. Recursive Retriever + Node References\n",
-        "3. Recursive Retriever + Node References + Braintrust\n",
-        "4. Router Retriever\n",
-        "5. Ensemble Retrieval Guide\n",
-        "6. Google Generative Language Semantic Retriever\n",
-        "7. Structured Hierarchical Retrieval\n",
+        "Document and Node objects are core abstractions within LlamaIndex.\n",
         "\n",
-        "**Managed Retrievers**\n",
+        "------------------------\n",
         "\n",
-        "1. Google Generative Language Semantic Retriever\n",
-        "2. Vectara Managed Index\n",
-        "3. Managed Index with Zilliz Cloud Pipelines\n",
-        "4. VideoDB Retriever"
+        "A Document is a generic container around any data source - for instance, a PDF, an API output, or retrieved data from a database. They can be constructed manually, or created automatically via our data loaders. By default, a Document stores text along with some other attributes. Some of these are listed below.\n",
+        "\n",
+        "metadata - a dictionary of annotations that can be appended to the text.\n",
+        "\n",
+        "relationships - a dictionary containing relationships to other Documents/Nodes.\n",
+        "\n",
+        "---------------------------------\n",
+        "\n",
+        "A Node represents a “chunk” of a source Document, whether that is a text chunk, an image, or other. Similar to Documents, they contain metadata and relationship information with other nodes.\n",
+        "\n",
+        "Nodes are a first-class citizen in LlamaIndex. You can choose to define Nodes and all its attributes directly. You may also choose to “parse” source Documents into Nodes through our NodeParser classes. By default every Node derived from a Document will inherit the same metadata from that Document (e.g. a “file_name” filed in the Document is propagated to every Node).\n",
+        "\n"
       ],
       "metadata": {
-        "id": "lGnt7yvX6nhY"
+        "id": "U-A8qnV6U83B"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Documents**\n",
+        "\n",
+        "from llama_index.core import Document, VectorStoreIndex\n",
+        "\n",
+        "text_list = [text1, text2, ...]\n",
+        "documents = [Document(text=t) for t in text_list]\n",
+        "\n",
+        "# build index\n",
+        "index = VectorStoreIndex.from_documents(documents)\n"
+      ],
+      "metadata": {
+        "id": "BfdN8MkbV_HW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Nodes**\n",
+        "from llama_index.core.node_parser import SentenceSplitter\n",
+        "\n",
+        "# load documents\n",
+        "...\n",
+        "\n",
+        "# parse nodes\n",
+        "parser = SentenceSplitter()\n",
+        "nodes = parser.get_nodes_from_documents(documents)\n",
+        "\n",
+        "# build index\n",
+        "index = VectorStoreIndex(nodes)"
+      ],
+      "metadata": {
+        "id": "Ra_3tRa5WMQ3"
       }
     }
   ]
